[project]
name = "py-inotify"
version = "0.0.1"
authors = [
    { name="https://github.com/izkn" }
]
description = "Lightweight bindings for inotify(7)"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]

[project.urls]
"Source" = "https://github.com/izkn/py-inotify"
